--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -199,7 +199,7 @@ body {
 .theme-toggle {
   position: fixed;
   top: 20px;
-  right: 20px;
+  right: 80px;
   z-index: 9998;
   background: none;
   border: none;
@@ -784,8 +784,13 @@ body {
 @media (max-width: 768px) {
   .theme-toggle {
     top: 15px;
-    right: 15px;
+    right: 70px;
   }
+  
+  .navbar-toggler {
+    z-index: 9999;
+  }
+}
   
   .theme-toggle-track {
     width: 45px;
