feat: Aplica fonte Celtic no parágrafo da home

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,7 +44,8 @@ body {
 }
 
 .hero-section h1,
-.hero-section .display-4 {
+.hero-section .display-4,
+.hero-section .lead {
     font-family: 'Celtic', serif;
 }
 
